# ad_blog_api

./: .flake8  .gitignore  docker-compose.dockerDB_api.yml  kill_uvicorn.sh  pyproject.toml  requirements.txt
.windsurf/rules/: python-fastapi-rules.md
alembic/: env.py  script.py.mako
alembic/versions/: 9f98f6bc42ff_initial_migrations_v1.py  e7ea75123fd0_initial_migration.py
app/: main.py
app/api/: router.py
app/api/v1/: router.py
app/api/v1/auth/: __init__.py  dependencies.py  router.py  schema.py  security.py  service.py
app/api/v1/author/: router.py  schema.py  service.py
app/api/v1/category/: router.py  schema.py  service.py
app/api/v1/health/: router.py  schema.py  service.py
app/api/v1/subscriber/: __init__.py  router.py  schema.py  service.py
app/core/: config.py  errors.py
app/db/: db_init.py
app/db/models/: __init__.py  article.py  article_tag.py  article_version.py  author.py  base.py  category.py  permission.py  subscriber.py  tag.py  user.py
app/db/utils/: embeddings.py  search.py  vector_search.py
app/utils/: errors.py
check/api/: auth.rest  author.rest  author_self.rest  category.rest  subscriber.rest  tag.rest  user.rest
dockerDB/: Dockerfile.local
dockerDB/init/: 01_extensions_main.sql  02_create_test_db.sql  03_extensions_test.sql
docs/api/auth/: auth.md
docs/api/author/: author.md
docs/api/category/: category.md
docs/api/subscriber/: subscriber.md
docs/api/tag/: tag.md
docs/api/user/: user.md
docs/app/api/: author_user_relationship.md
helper_scripts/: create_super_user.py  kill_uvicorn.py  run_alembic.py
(+17 files in other folders)
