[project]
name = "ad-blog-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "black>=25.1.0",
    "fastapi[standard]>=0.116.1",
    "flake8>=7.3.0",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.24",
]


[tool.flake8]
max-line-length = 120
ignore = "E501"

[tool.black]
line-length = 120
ignore = "E501"
